Comandos SQL corrigidos e teste concluído com sucesso com o banco de dados